--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.5",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "sweetalert2": "^10.6.1",
@@ -49,7 +49,6 @@
   "devDependencies": {
     "@types/markdown-to-jsx": "^6.11.2",
     "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.8",
     "miragejs": "^0.1.41"
   }
