--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
-    "dayjs": "^1.9.3",
+    "dayjs": "^1.9.4",
     "markdown-to-jsx": "^7.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-hook-form": "^6.9.5",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-hook-form": "^5.7.2",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "sweetalert2": "^10.6.1",
+    "sweetalert2": "^10.9.0",
     "typescript": "^3.7.5",
     "yup": "^0.29.3"
   },
@@ -47,9 +47,10 @@
     ]
   },
   "devDependencies": {
-    "@types/markdown-to-jsx": "^6.11.2",
+    "@types/markdown-to-jsx": "^6.11.3",
     "@types/react-redux": "^7.1.9",
-    "@types/yup": "^0.29.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/yup": "^0.29.9",
     "miragejs": "^0.1.41"
   }
 }
